// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should pass through optional props 1`] = `
<header
  className="root"
>
  <PageBlock>
    <div
      className="externalNav"
    >
      <CountryDropdown
        checked={0}
        linkRenderer={[Function]}
        links={
          Array [
            Object {
              "ItemIcon": [Function],
              "country": "hk",
              "language": "en",
              "title": "Hong Kong (English)",
              "url": "https://hk.jobsdb.com/hk",
            },
            Object {
              "ItemIcon": [Function],
              "country": "id",
              "language": "en",
              "title": "Indonesia (English)",
              "url": "https://id.jobsdb.com/id",
            },
          ]
        }
        messages={
          Object {
            "header.employerLinkPrefix": "Awesome employers should ",
            "header.employerSiteTitle": "click here",
            "header.employerSiteUrl": "http://brand.seekasia.com",
            "header.homeUrl": "http://seekasia.com/home",
            "header.homeUrlText": "awesome",
          }
        }
        onMenuToggle={[Function]}
      />
    </div>
    <div
      className="primaryNavNoLogin"
    >
      <h1
        className="logo"
      >
        <a
          className="logoLink"
          href="/"
        >
          <ScreenReaderOnly
            component="span"
          >
            awesome
          </ScreenReaderOnly>
        </a>
        <FakeComponent
          country="my"
        />
      </h1>
      <div
        className="primaryNavLinksWrapper"
      >
        <span
          className="primaryNavLinkWrapper"
          key="0"
        >
          <a
            className="primaryNavLink primaryNavLink"
            href="http://seekasia.com/home"
          >
            <Text
              baseline={true}
            >
               
              Home
            </Text>
          </a>
        </span>
        <span
          className="primaryNavLinkWrapper"
          key="1"
        >
          <a
            className="primaryNavLink primaryNavLink"
            href="http://seekasia.com/myPortal"
          >
            <Text
              baseline={true}
            >
               
              MyPortal
            </Text>
          </a>
        </span>
        <span
          className="primaryNavLinkWrapper"
          key="2"
        >
          <a
            className="primaryNavLink primaryNavLink"
            href="http://seekasia.com/resources"
          >
            <Text
              baseline={true}
            >
               
              Resources
            </Text>
          </a>
        </span>
        <span
          className="primaryNavLinkWrapper"
          key="3"
        >
          <a
            className="primaryNavLink primaryNavLink"
            href="http://seekasia.com/career-insights"
          >
            <Text
              baseline={true}
            >
               
              CareerInsights
            </Text>
          </a>
        </span>
      </div>
      <UserAccount
        authenticationStatus="unauthenticated"
        brandStyles={
          Object {
            "employerLink": "employerLink",
            "primaryNavLink": "primaryNavLink",
          }
        }
        linkRenderer={[Function]}
        loginAvailable={false}
        messages={
          Object {
            "header.employerLinkPrefix": "Awesome employers should ",
            "header.employerSiteTitle": "click here",
            "header.employerSiteUrl": "http://brand.seekasia.com",
            "header.homeUrl": "http://seekasia.com/home",
            "header.homeUrlText": "awesome",
          }
        }
        onMenuToggle={[Function]}
      />
    </div>
    <ActionTray
      activeTab="ACTIVE_TAB_HOME"
      brandStyles={
        Object {
          "employerLink": "employerLink",
          "primaryNavLink": "primaryNavLink",
        }
      }
      country="hk"
      handleToggleMenu={[Function]}
      linkRenderer={[Function]}
      menuOpen={false}
      messages={
        Object {
          "header.employerLinkPrefix": "Awesome employers should ",
          "header.employerSiteTitle": "click here",
          "header.employerSiteUrl": "http://brand.seekasia.com",
          "header.homeUrl": "http://seekasia.com/home",
          "header.homeUrlText": "awesome",
        }
      }
      showMenu={false}
    />
    <Menu
      authenticationStatus="unauthenticated"
      brandStyles={
        Object {
          "employerLink": "employerLink",
          "primaryNavLink": "primaryNavLink",
        }
      }
      linkRenderer={[Function]}
      links={
        Array [
          Object {
            "ItemIcon": [Function],
            "title": "Home",
            "url": "http://seekasia.com/home",
          },
          Object {
            "ItemIcon": [Function],
            "title": "MyPortal",
            "url": "http://seekasia.com/myPortal",
          },
          Object {
            "ItemIcon": [Function],
            "title": "Resources",
            "url": "http://seekasia.com/resources",
          },
          Object {
            "ItemIcon": [Function],
            "title": "CareerInsights",
            "url": "http://seekasia.com/career-insights",
          },
        ]
      }
      locales={
        Array [
          Object {
            "ItemIcon": [Function],
            "country": "hk",
            "language": "en",
            "title": "Hong Kong (English)",
            "url": "https://hk.jobsdb.com/hk",
          },
          Object {
            "ItemIcon": [Function],
            "country": "id",
            "language": "en",
            "title": "Indonesia (English)",
            "url": "https://id.jobsdb.com/id",
          },
        ]
      }
      loginAvailable={false}
      messages={
        Object {
          "header.employerLinkPrefix": "Awesome employers should ",
          "header.employerSiteTitle": "click here",
          "header.employerSiteUrl": "http://brand.seekasia.com",
          "header.homeUrl": "http://seekasia.com/home",
          "header.homeUrlText": "awesome",
        }
      }
      shouldShowMenu={false}
    />
  </PageBlock>
</header>
`;

exports[`Header should render with default props 1`] = `
<header
  className="root"
>
  <PageBlock>
    <div
      className="externalNav"
    >
      <CountryDropdown
        checked={0}
        linkRenderer={[Function]}
        links={
          Array [
            Object {
              "ItemIcon": [Function],
              "country": "hk",
              "language": "en",
              "title": "Hong Kong (English)",
              "url": "https://hk.jobsdb.com/hk",
            },
            Object {
              "ItemIcon": [Function],
              "country": "id",
              "language": "en",
              "title": "Indonesia (English)",
              "url": "https://id.jobsdb.com/id",
            },
          ]
        }
        messages={
          Object {
            "header.employerLinkPrefix": "Awesome employers should ",
            "header.employerSiteTitle": "click here",
            "header.employerSiteUrl": "http://brand.seekasia.com",
            "header.homeUrl": "http://seekasia.com/home",
            "header.homeUrlText": "awesome",
          }
        }
        onMenuToggle={[Function]}
      />
    </div>
    <div
      className="primaryNavNoLogin"
    >
      <h1
        className="logo"
      >
        <a
          className="logoLink"
          href="/"
        >
          <ScreenReaderOnly
            component="span"
          >
            awesome
          </ScreenReaderOnly>
        </a>
        <FakeComponent />
      </h1>
      <div
        className="primaryNavLinksWrapper"
      />
      <UserAccount
        authenticationStatus="unauthenticated"
        brandStyles={
          Object {
            "employerLink": "employerLink",
            "primaryNavLink": "primaryNavLink",
          }
        }
        linkRenderer={[Function]}
        loginAvailable={false}
        messages={
          Object {
            "header.employerLinkPrefix": "Awesome employers should ",
            "header.employerSiteTitle": "click here",
            "header.employerSiteUrl": "http://brand.seekasia.com",
            "header.homeUrl": "http://seekasia.com/home",
            "header.homeUrlText": "awesome",
          }
        }
        onMenuToggle={[Function]}
      />
    </div>
    <ActionTray
      brandStyles={
        Object {
          "employerLink": "employerLink",
          "primaryNavLink": "primaryNavLink",
        }
      }
      country="hk"
      handleToggleMenu={[Function]}
      linkRenderer={[Function]}
      menuOpen={false}
      messages={
        Object {
          "header.employerLinkPrefix": "Awesome employers should ",
          "header.employerSiteTitle": "click here",
          "header.employerSiteUrl": "http://brand.seekasia.com",
          "header.homeUrl": "http://seekasia.com/home",
          "header.homeUrlText": "awesome",
        }
      }
    />
    <Menu
      authenticationStatus="unauthenticated"
      brandStyles={
        Object {
          "employerLink": "employerLink",
          "primaryNavLink": "primaryNavLink",
        }
      }
      linkRenderer={[Function]}
      locales={
        Array [
          Object {
            "ItemIcon": [Function],
            "country": "hk",
            "language": "en",
            "title": "Hong Kong (English)",
            "url": "https://hk.jobsdb.com/hk",
          },
          Object {
            "ItemIcon": [Function],
            "country": "id",
            "language": "en",
            "title": "Indonesia (English)",
            "url": "https://id.jobsdb.com/id",
          },
        ]
      }
      loginAvailable={false}
      messages={
        Object {
          "header.employerLinkPrefix": "Awesome employers should ",
          "header.employerSiteTitle": "click here",
          "header.employerSiteUrl": "http://brand.seekasia.com",
          "header.homeUrl": "http://seekasia.com/home",
          "header.homeUrlText": "awesome",
        }
      }
      shouldShowMenu={false}
    />
  </PageBlock>
</header>
`;

exports[`Header should render with links list 1`] = `
<header
  className="root"
>
  <PageBlock>
    <div
      className="externalNav"
    >
      <CountryDropdown
        checked={0}
        linkRenderer={[Function]}
        links={
          Array [
            Object {
              "ItemIcon": [Function],
              "country": "hk",
              "language": "en",
              "title": "Hong Kong (English)",
              "url": "https://hk.jobsdb.com/hk",
            },
            Object {
              "ItemIcon": [Function],
              "country": "id",
              "language": "en",
              "title": "Indonesia (English)",
              "url": "https://id.jobsdb.com/id",
            },
          ]
        }
        messages={
          Object {
            "header.employerLinkPrefix": "Awesome employers should ",
            "header.employerSiteTitle": "click here",
            "header.employerSiteUrl": "http://brand.seekasia.com",
            "header.homeUrl": "http://seekasia.com/home",
            "header.homeUrlText": "awesome",
          }
        }
        onMenuToggle={[Function]}
      />
    </div>
    <div
      className="primaryNavNoLogin"
    >
      <h1
        className="logo"
      >
        <a
          className="logoLink"
          href="/"
        >
          <ScreenReaderOnly
            component="span"
          >
            awesome
          </ScreenReaderOnly>
        </a>
        <FakeComponent />
      </h1>
      <div
        className="primaryNavLinksWrapper"
      >
        <span
          className="primaryNavLinkWrapper"
          key="0"
        >
          <a
            className="primaryNavLink primaryNavLink"
            href="http://seekasia.com/home"
          >
            <Text
              baseline={true}
            >
               
              Home
            </Text>
          </a>
        </span>
        <span
          className="primaryNavLinkWrapper"
          key="1"
        >
          <a
            className="primaryNavLink primaryNavLink"
            href="http://seekasia.com/myPortal"
          >
            <Text
              baseline={true}
            >
               
              MyPortal
            </Text>
          </a>
        </span>
        <span
          className="primaryNavLinkWrapper"
          key="2"
        >
          <a
            className="primaryNavLink primaryNavLink"
            href="http://seekasia.com/resources"
          >
            <Text
              baseline={true}
            >
               
              Resources
            </Text>
          </a>
        </span>
        <span
          className="primaryNavLinkWrapper"
          key="3"
        >
          <a
            className="primaryNavLink primaryNavLink"
            href="http://seekasia.com/career-insights"
          >
            <Text
              baseline={true}
            >
               
              CareerInsights
            </Text>
          </a>
        </span>
      </div>
      <UserAccount
        authenticationStatus="unauthenticated"
        brandStyles={
          Object {
            "employerLink": "employerLink",
            "primaryNavLink": "primaryNavLink",
          }
        }
        linkRenderer={[Function]}
        loginAvailable={false}
        messages={
          Object {
            "header.employerLinkPrefix": "Awesome employers should ",
            "header.employerSiteTitle": "click here",
            "header.employerSiteUrl": "http://brand.seekasia.com",
            "header.homeUrl": "http://seekasia.com/home",
            "header.homeUrlText": "awesome",
          }
        }
        onMenuToggle={[Function]}
      />
    </div>
    <ActionTray
      brandStyles={
        Object {
          "employerLink": "employerLink",
          "primaryNavLink": "primaryNavLink",
        }
      }
      country="hk"
      handleToggleMenu={[Function]}
      linkRenderer={[Function]}
      menuOpen={false}
      messages={
        Object {
          "header.employerLinkPrefix": "Awesome employers should ",
          "header.employerSiteTitle": "click here",
          "header.employerSiteUrl": "http://brand.seekasia.com",
          "header.homeUrl": "http://seekasia.com/home",
          "header.homeUrlText": "awesome",
        }
      }
    />
    <Menu
      authenticationStatus="unauthenticated"
      brandStyles={
        Object {
          "employerLink": "employerLink",
          "primaryNavLink": "primaryNavLink",
        }
      }
      linkRenderer={[Function]}
      links={
        Array [
          Object {
            "ItemIcon": [Function],
            "title": "Home",
            "url": "http://seekasia.com/home",
          },
          Object {
            "ItemIcon": [Function],
            "title": "MyPortal",
            "url": "http://seekasia.com/myPortal",
          },
          Object {
            "ItemIcon": [Function],
            "title": "Resources",
            "url": "http://seekasia.com/resources",
          },
          Object {
            "ItemIcon": [Function],
            "title": "CareerInsights",
            "url": "http://seekasia.com/career-insights",
          },
        ]
      }
      locales={
        Array [
          Object {
            "ItemIcon": [Function],
            "country": "hk",
            "language": "en",
            "title": "Hong Kong (English)",
            "url": "https://hk.jobsdb.com/hk",
          },
          Object {
            "ItemIcon": [Function],
            "country": "id",
            "language": "en",
            "title": "Indonesia (English)",
            "url": "https://id.jobsdb.com/id",
          },
        ]
      }
      loginAvailable={false}
      messages={
        Object {
          "header.employerLinkPrefix": "Awesome employers should ",
          "header.employerSiteTitle": "click here",
          "header.employerSiteUrl": "http://brand.seekasia.com",
          "header.homeUrl": "http://seekasia.com/home",
          "header.homeUrlText": "awesome",
        }
      }
      shouldShowMenu={false}
    />
  </PageBlock>
</header>
`;

exports[`Header should render with login available 1`] = `
<header
  className="root"
>
  <PageBlock>
    <div
      className="externalNav"
    >
      <CountryDropdown
        checked={0}
        linkRenderer={[Function]}
        links={
          Array [
            Object {
              "ItemIcon": [Function],
              "country": "hk",
              "language": "en",
              "title": "Hong Kong (English)",
              "url": "https://hk.jobsdb.com/hk",
            },
            Object {
              "ItemIcon": [Function],
              "country": "id",
              "language": "en",
              "title": "Indonesia (English)",
              "url": "https://id.jobsdb.com/id",
            },
          ]
        }
        messages={
          Object {
            "header.employerLinkPrefix": "Awesome employers should ",
            "header.employerSiteTitle": "click here",
            "header.employerSiteUrl": "http://brand.seekasia.com",
            "header.homeUrl": "http://seekasia.com/home",
            "header.homeUrlText": "awesome",
          }
        }
        onMenuToggle={[Function]}
      />
    </div>
    <div
      className="primaryNav"
    >
      <h1
        className="logo"
      >
        <a
          className="logoLink"
          href="/"
        >
          <ScreenReaderOnly
            component="span"
          >
            awesome
          </ScreenReaderOnly>
        </a>
        <FakeComponent />
      </h1>
      <div
        className="primaryNavLinksWrapper"
      />
      <div
        className="secondaryNav"
      />
      <UserAccount
        authenticationStatus="unauthenticated"
        brandStyles={
          Object {
            "employerLink": "employerLink",
            "primaryNavLink": "primaryNavLink",
          }
        }
        linkRenderer={[Function]}
        loginAvailable={true}
        messages={
          Object {
            "header.employerLinkPrefix": "Awesome employers should ",
            "header.employerSiteTitle": "click here",
            "header.employerSiteUrl": "http://brand.seekasia.com",
            "header.homeUrl": "http://seekasia.com/home",
            "header.homeUrlText": "awesome",
          }
        }
        onMenuToggle={[Function]}
      />
    </div>
    <ActionTray
      brandStyles={
        Object {
          "employerLink": "employerLink",
          "primaryNavLink": "primaryNavLink",
        }
      }
      country="hk"
      handleToggleMenu={[Function]}
      linkRenderer={[Function]}
      menuOpen={false}
      messages={
        Object {
          "header.employerLinkPrefix": "Awesome employers should ",
          "header.employerSiteTitle": "click here",
          "header.employerSiteUrl": "http://brand.seekasia.com",
          "header.homeUrl": "http://seekasia.com/home",
          "header.homeUrlText": "awesome",
        }
      }
    />
    <Menu
      authenticationStatus="unauthenticated"
      brandStyles={
        Object {
          "employerLink": "employerLink",
          "primaryNavLink": "primaryNavLink",
        }
      }
      linkRenderer={[Function]}
      locales={
        Array [
          Object {
            "ItemIcon": [Function],
            "country": "hk",
            "language": "en",
            "title": "Hong Kong (English)",
            "url": "https://hk.jobsdb.com/hk",
          },
          Object {
            "ItemIcon": [Function],
            "country": "id",
            "language": "en",
            "title": "Indonesia (English)",
            "url": "https://id.jobsdb.com/id",
          },
        ]
      }
      loginAvailable={true}
      messages={
        Object {
          "header.employerLinkPrefix": "Awesome employers should ",
          "header.employerSiteTitle": "click here",
          "header.employerSiteUrl": "http://brand.seekasia.com",
          "header.homeUrl": "http://seekasia.com/home",
          "header.homeUrlText": "awesome",
        }
      }
      shouldShowMenu={false}
    />
  </PageBlock>
</header>
`;
